--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,52 @@
+erver {
+    server_name 158.160.64.70 kittyden.ddns.net;
+
+    location / {
+        proxy_set_header Host $http_host;
+        proxy_pass http://127.0.0.1:8000;
+
+    }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/kittyden.ddns.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/kittyden.ddns.net/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
 server {
-  listen 80;
-  index index.html;
+    server_name 158.160.64.70 kittydenis.zapto.org;
 
-  location /api/ {
-    proxy_set_header Host $http_host;
-    #proxy_pass http://backend:8000/api/;
-  }
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    #proxy_pass http://backend:8000/admin/;
-  }
+        location /api/ {
+        proxy_pass http://127.0.0.1:9000;
+    }
 
-  location / {
-    alias /static/;
-    try_files $uri $uri/ /index.html;
-  }
+    location /admin/ {
+        proxy_pass http://127.0.0.1:9000;
+    }
+
+    location / {
+        root   /var/www/infra_sprint1;
+        index  index.html index.htm;
+        try_files $uri /index.html;
+    }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/kittydenis.zapto.org/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/kittydenis.zapto.org/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+server {
+    if ($host = kittydenis.zapto.org) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    server_name 158.160.64.70 kittydenis.zapto.org;
+    listen 80;
+    return 404; # managed by Certbot
 }
