--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,36 +1,34 @@
 version: '3'
 
 volumes:
-  pg_data_kitty_production:
-  static_kitty_production:
-  media_kitty_production:
+  pg_data:
+  static:
+  media:
 
 services:
   db:
-    image: postgres:13.10
+    image: postgres:13
     env_file: .env
     volumes:
-      - pg_data_kitty_production:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
   backend:
-    image: dencapone/kittygram_backend
+    image: dencapone/kittygram_final_backend
     env_file: .env
     volumes:
-      - static_kitty_production:/backend_static/
-      - media_kitty_production:/app/media/cats/images/
-    depends_on:
-    - db
+      - static:/backend_static
+      - media:/app/media
   frontend:
-    image: dencapone/kittygram_frontend  # Качаем с DockerHub
+    image: dencapone/kittygram_final_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static_kitty_production:/frontend_static
+      - static:/frontend_static
   gateway:
-    image: dencapone/kittygram_gateway  # Качаем с DockerHub
-    # env_file: .env
+    image: dencapone/kittygram_final_gateway
+    env_file: .env
     volumes:
-      - static_kitty_production:/staticfiles/
-      - media_kitty_production:/media/cats/images/
+      - static:/staticfiles/
+      - media:/app/media
     ports:
       - 9000:80
     depends_on:
